--- a/index.html
+++ b/index.html
@@ -2,14 +2,50 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
-    <link rel="stylesheet" href="css/normalize.css">
-    <link rel="stylesheet" href="css/base.css">
-    <title>京东首页</title>
+    <meta name="description" content="京东JD.COM-专业的综合网上购物商城,销售家电、数码通讯、电脑、家居百货、服装服饰、母婴、图书、食品等数万个品牌优质商品.便捷、诚信的服务，为您提供愉悦的网上购物体验!">
+    <meta name="keywords" content="网上购物,网上商城,手机,笔记本,电脑,MP3,CD,VCD,DV,相机,数码,配件,手表,存储卡,京东">
+    <link rel="shortcut icon" href="favicon.ico" />
+    <link rel="stylesheet" href="css/normalize.css" />
+    <link rel="stylesheet" href="css/base.css" />
+    <title>京东(JD.COM)-正品低价、品质保障、配送及时、轻松购物！</title>
 </head>
 <body>
-    hello world
+    <header>
+        <div class="w">
+            <a href="#">
+                <img src="images/headerAdd.jpg" width="1190px" height="60px" alt="头部广告" />
+            </a>
+        </div>
+    </header>
+    <div class="shortcut">
+        <div class="w">
+            <ul class="city fl">
+                <li><i class="active"></i>北京</li>
+            </ul>
+            <ul class="menu fr">
+                <li>
+                    <a href="#">你好，请登录</a>
+                    <a class="register active" href="#">免费注册</a>
+                </li>
+                <li class="space"></li> 
+                <li><a href="#">我的订单</a></li>
+                <li class="space"></li> 
+                <li><a href="#">我的京东</a><i></i></li>
+                <li class="space"></li> 
+                <li><a href="#">京东会员</a></li>
+                <li class="space"></li> 
+                <li><a href="#">企业采购</a><i></i></li>
+                <li class="space"></li> 
+                <li>客户服务<i></i></li>
+                <li class="space"></li> 
+                <li>网站导航<i></i></li>
+                <li class="space"></li> 
+                <li class="jd-phone">
+                    手机京东
+                    <img src="images/two-dimension-code.gif" width="68px" height="68px" alt="二维码" />
+                </li>
+            </ul>
+        </div>
+    </div>
 </body>
 </html>
